<resources>
    <string name="app_name">快速密钥交换工具</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="MENU_button_1">个人码生成器</string>
    <string name="MENU_button_2">通信码生成器</string>
    <string name="MENU_button_3">收件密钥生成器</string>
    <string name="make_private_key_title">个人码生成器</string>
    <string name="MPC_inputlead_1">个人明码的第一个值N</string>
    <string name="MPC_inputlead_2">个人明码的第二个值m</string>
    <string name="MPC_inputlead_3">个人暗码p</string>
    <string name="Submit">提交</string>
    <string name="MPC_result_1">您的个人明码(N,m,P)是</string>
    <string name="MPC_result_2">请将其公布</string>
    <string name="MPC_result_3">您的个人暗码(q)是</string>
    <string name="MPC_result_4">请将其保密</string>
    <string name="MCC_title">通信码生成器</string>
    <string name="MCC_input_1">个人明码第一个值N</string>
    <string name="MCC_input_2">个人明码第二个值m</string>
    <string name="MCC_input_3">个人明码第三个值P</string>
    <string name="MCC_lead">请输入个人明码或以用户名导入\n请输入小于3000000000的整数</string>
    <string name="MCC_input_4">通信暗码q</string>
    <string name="MCC_result_1">你们的通信明码(Q)是</string>
    <string name="MCC_result_2">请将其发给收件人</string>
    <string name="MCC_result_3">你们的通信暗码(q)是</string>
    <string name="MCC_result_4">请将其保密</string>
    <string name="MCC_result_5">你们的通信密钥(K)是</string>
    <string name="MCC_result_6">请使用它给信息加密</string>
    <string name="CK_input_1">通信明码Q</string>
    <string name="CK_input_2">个人明码第二个值m</string>
    <string name="CK_input_3">个人暗码p</string>
    <string name="CK_title">密钥生成器</string>
    <string name="CK_result_1">你们的通信密钥(K)是</string>
    <string name="CK_result_2">请用它解密信息</string>
    <string name="wrong_input">您输入的内容有误 请检查</string>
    <string name="input_rule">请输入小于3000000000的整数</string>
    <string name="random">随 机</string>
    <string name="username">注册用户名</string>
    <string name="signin">注 册</string>
    <string name="add_succeed">注册成功,请记录你的用户名和个人暗码</string>
    <string name="add_failed">该用户名已被注册,请修改</string>
    <string name="from_username">通过用户名</string>
    <string name="search">搜 索</string>
    <string name="check_failed">查无此人,请核对后重试</string>
    <string name="check_succeed">导入成功</string>
</resources>